--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "node": ">=20.9.0"
   },
   "dependencies": {
-    "@ai-sdk/openai": "beta",
-    "@ai-sdk/provider": "beta",
-    "@mastra/client-js": "ai-v5",
-    "@mastra/core": "ai-v5",
-    "@mastra/loggers": "ai-v5",
-    "@mastra/mcp": "ai-v5",
-    "@mastra/memory": "ai-v5",
-    "@mastra/pg": "ai-v5",
-    "ai": "beta",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/provider": "^1.1.3",
+    "@mastra/client-js": "^0.10.9",
+    "@mastra/core": "^0.10.10",
+    "@mastra/loggers": "^0.10.3",
+    "@mastra/mcp": "^0.10.5",
+    "@mastra/memory": "^0.11.1",
+    "@mastra/pg": "^0.12.1",
+    "ai": "^4.3.16",
     "arktype": "^2.1.20",
     "confbox": "^0.2.2",
     "drizzle-orm": "^0.44.2",
