--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/provider": "^1.1.3",
+    "@aws-sdk/client-s3": "^3.842.0",
     "@mastra/client-js": "^0.10.9",
     "@mastra/core": "^0.10.10",
     "@mastra/loggers": "^0.10.3",
