--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "mastra start",
     "env:gen": "bun scripts/gen-env-template.ts",
     "format": "prettier --write src/",
+    "cf:typegen": "wrangler types",
+    "typecheck": "tsc --noEmit",
     "test": "vitest"
   },
   "keywords": [],
@@ -21,7 +23,10 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/provider": "^1.1.3",
+    "@ai-sdk/xai": "^1.2.16",
     "@aws-sdk/client-s3": "^3.842.0",
+    "@browserbasehq/stagehand": "^2.4.1",
+    "@google/genai": "^1.8.0",
     "@mastra/client-js": "^0.10.9",
     "@mastra/core": "^0.10.10",
     "@mastra/loggers": "^0.10.3",
