--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "hono": "^4.8.3",
     "lodash-es": "^4.17.21",
     "openai": "^5.8.2",
+    "partysocket": "^1.1.4",
     "postgres": "^3.4.7",
     "rxjs": "^7.8.2",
     "sharp": "^0.34.2",
