--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "env:example": "dotenvx ext genexample",
     "format": "prettier --write src/",
     "typecheck": "tsc --noEmit",
-    "test": "dotenvx run -- vitest"
+    "test": "dotenvx run -- vitest run"
   },
   "keywords": [],
   "author": "",
@@ -40,8 +40,11 @@
     "fetch-event-stream": "^0.1.5",
     "hono": "^4.8.3",
     "lodash-es": "^4.17.21",
+    "openai": "^5.8.2",
+    "partysocket": "^1.1.4",
     "postgres": "^3.4.7",
     "rxjs": "^7.8.2",
+    "sharp": "^0.34.2",
     "ulid": "^3.0.1",
     "unctx": "^2.4.1",
     "zod": "^3.25.67"
@@ -56,6 +59,7 @@
     "mastra": "^0.10.8",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
 }
