--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,8 @@ pre-commit:
   parallel: true
   commands:
     prettier:
+      glob: "src/**/*"
       run: bun --bun prettier --check --cache --write --ignore-path .gitignore {staged_files} && git add {staged_files}
     check-env-encryption:
-      run: bun scripts/check-env-encryption.ts
+      run: bun scripts/check-env-encryption.ts {staged_files}
       fail_text: '环境变量未加密，请使用 `dotenvx encrypt` 加密后再提交'
