--- a/package.json
+++ b/package.json
@@ -23,43 +23,44 @@
     "node": ">=20.9.0"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai": "^1.3.23",
     "@ai-sdk/provider": "^1.1.3",
-    "@ai-sdk/xai": "^1.2.16",
-    "@aws-sdk/client-s3": "^3.842.0",
+    "@ai-sdk/xai": "^1.2.17",
+    "@aws-sdk/client-s3": "^3.844.0",
     "@browserbasehq/stagehand": "^2.4.1",
-    "@google/genai": "^1.8.0",
-    "@mastra/client-js": "^0.10.9",
-    "@mastra/core": "^0.10.10",
+    "@google/genai": "^1.9.0",
+    "@mastra/client-js": "^0.10.11",
+    "@mastra/core": "^0.10.12",
     "@mastra/loggers": "^0.10.3",
-    "@mastra/mcp": "^0.10.5",
-    "@mastra/memory": "^0.11.1",
-    "@mastra/pg": "^0.12.1",
-    "ai": "^4.3.16",
+    "@mastra/mcp": "^0.10.6",
+    "@mastra/memory": "^0.11.2",
+    "@mastra/pg": "^0.12.2",
+    "ai": "^4.3.17",
     "arktype": "^2.1.20",
     "confbox": "^0.2.2",
     "drizzle-orm": "^0.44.2",
+    "effect": "^3.16.12",
     "fetch-event-stream": "^0.1.5",
-    "hono": "^4.8.3",
+    "hono": "^4.8.4",
     "lodash-es": "^4.17.21",
-    "openai": "^5.8.2",
+    "openai": "^5.8.3",
     "partysocket": "^1.1.4",
     "postgres": "^3.4.7",
     "rxjs": "^7.8.2",
     "sharp": "^0.34.2",
     "ulid": "^3.0.1",
     "unctx": "^2.4.1",
-    "zod": "^3.25.67"
+    "zod": "^4.0.2"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.45.2",
+    "@dotenvx/dotenvx": "^1.47.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "@types/bun": "^1.2.17",
+    "@types/bun": "^1.2.18",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^24.0.8",
+    "@types/node": "^24.0.12",
     "drizzle-kit": "^0.31.4",
-    "lefthook": "^1.11.16",
-    "mastra": "^0.10.8",
+    "lefthook": "^1.12.1",
+    "mastra": "^0.10.12",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
