--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/mastra/index.ts",
   "scripts": {
     "preinstall": "lefthook install",
-    "dev": "dotenvx run -- mastra dev",
+    "dev": "run-p dev:*",
+    "dev:convex": "dotenvx run -- convex dev",
+    "dev:mastra": "dotenvx run -- mastra dev",
     "build": "mastra build",
     "start": "dotenvx run  -- mastra start",
     "env:check": "dotenvx run -- bun scripts/env-check.ts",
@@ -28,6 +30,8 @@
     "@ai-sdk/xai": "^1.2.17",
     "@aws-sdk/client-s3": "^3.844.0",
     "@browserbasehq/stagehand": "^2.4.1",
+    "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/r2": "^0.7.0",
     "@google/genai": "^1.9.0",
     "@mastra/client-js": "^0.10.11",
     "@mastra/core": "^0.10.12",
@@ -38,6 +42,7 @@
     "ai": "^4.3.17",
     "arktype": "^2.1.20",
     "confbox": "^0.2.2",
+    "convex": "^1.25.2",
     "drizzle-orm": "^0.44.2",
     "fetch-event-stream": "^0.1.5",
     "hono": "^4.8.4",
@@ -60,6 +65,7 @@
     "drizzle-kit": "^0.31.4",
     "lefthook": "^1.12.1",
     "mastra": "^0.10.12",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
