--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@aws-sdk/client-s3": "^3.844.0",
     "@browserbasehq/stagehand": "^2.4.1",
     "@convex-dev/auth": "^0.0.87",
-    "@convex-dev/r2": "^0.7.0",
     "@google/genai": "^1.9.0",
     "@mastra/client-js": "^0.10.11",
     "@mastra/core": "^0.10.12",
@@ -59,6 +58,7 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.47.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@smithy/types": "^4.3.1",
     "@types/bun": "^1.2.18",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.0.12",
@@ -67,6 +67,7 @@
     "mastra": "^0.10.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
+    "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
