chore: update convex configuration and add convex-helpers for type generation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "dotenvx run  -- mastra start",
     "env:check": "dotenvx run -- bun scripts/env-check.ts",
     "env:example": "dotenvx ext genexample",
+    "convex:typegen": "convex-helpers ts-api-spec --output-file src/convex/api.public.ts",
     "format": "prettier --write --ignore-path .gitignore --ignore-path .prettierignore src/",
     "typecheck": "tsc --noEmit",
     "x": "dotenvx run -- bun",
@@ -42,6 +43,7 @@
     "arktype": "^2.1.20",
     "confbox": "^0.2.2",
     "convex": "^1.25.2",
+    "convex-helpers": "^0.1.99",
     "drizzle-orm": "^0.44.2",
     "fetch-event-stream": "^0.1.5",
     "hono": "^4.8.4",
