--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/client-s3": "^3.844.0",
     "@browserbasehq/stagehand": "^2.4.1",
     "@convex-dev/auth": "^0.0.87",
+    "@fal-ai/client": "^1.6.0",
     "@google/genai": "^1.9.0",
     "@mastra/client-js": "^0.10.11",
     "@mastra/core": "^0.10.12",
