--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=20.9.0"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/groq": "^1.2.9",
     "@ai-sdk/openai": "^1.3.23",
     "@ai-sdk/provider": "^1.1.3",
