--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.47.3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@pulumi/azure-native": "^3.5.1",
+    "@pulumi/pulumi": "^3.183.0",
     "@smithy/types": "^4.3.1",
     "@types/bun": "^1.2.18",
     "@types/lodash-es": "^4.17.12",
