--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -53,92 +53,8 @@ config:
     description: 'Use environment-level domains (automatic domain assignment)'
     default: true
 
-  # Required environment variables (secrets)
-  # Set these using: pulumi config set --secret <key> <value>
-  # Or use the automation script: ./scripts/auto-set-pulumi-env.sh
-
-  # Database
-  a1d-agent:postgresUrl:
-    description: 'PostgreSQL database URL'
-    secret: true
-
-  a1d-agent:convexUrl:
-    description: 'Convex deployment URL'
-    secret: true
-
-  # AI Service API Keys (all optional - set only the ones you use)
-  a1d-agent:anthropicApiKey:
-    description: 'Anthropic API key for Claude'
-    secret: true
-
-  a1d-agent:groqApiKey:
-    description: 'Groq API key'
-    secret: true
-
-  a1d-agent:geminiApiKey:
-    description: 'Google Gemini API key'
-    secret: true
-
-  a1d-agent:falApiKey:
-    description: 'Fal API key'
-    secret: true
-
-  a1d-agent:xaiApiKey:
-    description: 'xAI API key'
-    secret: true
-
-  a1d-agent:openrouterApiKey:
-    description: 'OpenRouter API key'
-    secret: true
-
-  a1d-agent:minimaxApiKey:
-    description: 'Minimax API key'
-    secret: true
-
-  a1d-agent:minimaxGroupId:
-    description: 'Minimax Group ID'
-    secret: true
-
-  a1d-agent:huiyanAApiKey:
-    description: 'Huiyan A API key (Claude + OpenAI)'
-    secret: true
-
-  a1d-agent:huiyanBApiKey:
-    description: 'Huiyan B API key (Claude)'
-    secret: true
-
-  a1d-agent:huiyanCApiKey:
-    description: 'Huiyan C API key (Midjourney)'
-    secret: true
-
-  a1d-agent:speedpainterApiKey:
-    description: 'SpeedPainter API key'
-    secret: true
-
-  a1d-agent:wavespeedApiKey:
-    description: 'WaveSpeed API key'
-    secret: true
-
-  a1d-agent:x302ApiKey:
-    description: 'X 302 API key'
-    secret: true
-
-  # Cloudflare R2 Configuration
-  a1d-agent:cloudflareAccountId:
-    description: 'Cloudflare Account ID'
-    secret: true
-
-  a1d-agent:cloudflareAccessKeyId:
-    description: 'Cloudflare R2 Access Key ID'
-    secret: true
-
-  a1d-agent:cloudflareSecretKey:
-    description: 'Cloudflare R2 Secret Key'
-    secret: true
-
-  a1d-agent:cloudflareR2BucketName:
-    description: 'Cloudflare R2 Bucket Name'
-    default: 'dev'
+  a1d-agent:dotenvPrivateKey:
+    description: 'Dotenv private key'
     secret: true
 
 template:
