更新环境配置，添加示例文件并优化 Dockerfile
- 修改 .env 文件中的生产数据库连接字符串
- 新增 .env.example 文件以提供环境变量示例
- 更新 Dockerfile，添加 playground 目录的复制
- 修改启动命令以使用 dotenvx 运行

🤖 由 [opencode](https://opencode.ai) 生成

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev:convex": "dotenvx run -- convex dev",
     "dev:mastra": "dotenvx run -- mastra dev",
     "build": "./scripts/build.sh",
-    "start": "dotenvx run  -- mastra start",
-    "env:check": "dotenvx run -- bun scripts/env-check.ts",
+    "start": "dotenvx run  -- sh -c 'cd .mastra && node --import=./output/instrumentation.mjs ./output/index.mjs'",
     "env:example": "dotenvx ext genexample",
     "convex:typegen": "convex-helpers ts-api-spec --output-file src/convex/api.public.ts",
     "format": "prettier --write --ignore-path .gitignore --ignore-path .prettierignore src/",
