--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "a1d-agent-pulumi",
+  "name": "a1d-agent-aws-deployment",
   "version": "1.0.0",
-  "description": "Pulumi infrastructure configuration for a1d-agent",
+  "description": "AWS deployment configuration for A1D Agent using Pulumi",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc",
-    "up": "pulumi up",
+    "typecheck": "tsc --noEmit",
+    "up": "pulumi up -y",
     "preview": "pulumi preview",
-    "destroy": "pulumi destroy",
-    "stack:init": "pulumi stack init",
-    "stack:select": "pulumi stack select",
-    "config:set": "pulumi config set"
-  },
-  "keywords": [
-    "pulumi",
-    "infrastructure",
-    "iac"
-  ],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "@pulumi/azure-native": "^3.5.1",
-    "@pulumi/pulumi": "^3.184.0"
+    "destroy": "pulumi destroy"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.18",
-    "@types/node": "^24.0.15",
-    "typescript": "^5.8.3"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@pulumi/aws": "^6.0.0",
+    "@pulumi/awsx": "^2.0.0",
+    "@pulumi/pulumi": "^3.0.0"
   }
 }
