--- a/pulumi/tsconfig.json
+++ b/pulumi/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "target": "ES2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "declaration": true,
     "outDir": "bin",
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "pretty": true,
-    "noFallthroughCasesInSwitch": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
-    "allowImportingTsExtensions": true,
-    "baseUrl": "."
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["lib", "index.ts"]
+  "files": [
+    "index.ts"
+  ]
 }
